--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -329,7 +329,22 @@
 					</div>
 				</div>
 			</div>
-		</div>
+			<div *ngIf="isOtherRequired">
+				<div class="row info-box"  >
+					<div class="col-lg-4 caption">
+						<ul class="list-group">
+							 <li class=" list-group-item text-capitalize text-blue">Others</li>
+						</ul>
+					</div>
+					<div class="col-lg-8 info" >
+						<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+							<li class="list-group-item text-capitalize"   *ngIf="jobInfo?.match_select[item?.id] == '0'" >
+							  <span  >{{item?.title ? item?.title : '--'}}</span>
+							</li>
+						 </ul>
+					</div>
+				</div>
+			</div>
 		<div class="accordion" *ngIf="desired">
 			<div class="pj-title " >
 				<h6 class="mb-0" type="button">
@@ -655,6 +670,22 @@
 						<ul class="list-group">
 							<li class="list-group-item text-capitalize" >
 							  {{item?.value ? item?.value : '--'}}
+							</li>
+						 </ul>
+					</div>
+				</div>
+			</div>
+			<div *ngIf="isOtherDesired">
+				<div class="row info-box"  >
+					<div class="col-lg-4 caption">
+						<ul class="list-group">
+							 <li class=" list-group-item text-capitalize text-blue">Others</li>
+						</ul>
+					</div>
+					<div class="col-lg-8 info" >
+						<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+							<li class="list-group-item text-capitalize"   *ngIf="jobInfo?.match_select[item?.id] == '1'" >
+							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
 					</div>
@@ -991,6 +1022,22 @@
 					</div>
 				</div>
 			</div>
+			<div *ngIf="isOtherNice">
+				<div class="row info-box"  >
+					<div class="col-lg-4 caption">
+						<ul class="list-group">
+							 <li class=" list-group-item text-capitalize text-blue">Others</li>
+						</ul>
+					</div>
+					<div class="col-lg-8 info" >
+						<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+							<li class="list-group-item text-capitalize"   *ngIf="jobInfo?.match_select[item?.id] == '2'" >
+							  <span  >{{item?.title ? item?.title : '--'}}</span>
+							</li>
+						 </ul>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="accordion"  *ngIf="optional">
 			<div class="pj-title "  >
@@ -1290,6 +1337,22 @@
 						<ul class="list-group">
 							<li class="list-group-item text-capitalize" >
 							  {{item?.value ? item?.value : '--'}}
+							</li>
+						 </ul>
+					</div>
+				</div>
+			</div>
+			<div *ngIf="isOtherOptional">
+				<div class="row info-box"  >
+					<div class="col-lg-4 caption">
+						<ul class="list-group">
+							 <li class=" list-group-item text-capitalize text-blue">Others</li>
+						</ul>
+					</div>
+					<div class="col-lg-8 info" >
+						<ul class="list-group" *ngFor="let item of jobInfo?.others; let i=index">
+							<li class="list-group-item text-capitalize"   *ngIf="jobInfo?.match_select[item?.id] == ''" >
+							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
 					</div>
