--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
@@ -54,3 +54,10 @@
 .pj-titles  h6{
 	display: -webkit-inline-box !important;
 }
+
+.mtop-2{
+	margin-top: 2rem!important;
+}
+.mtop-4{
+	margin-top: 4rem!important;
+}
