--- a/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-job-multiple-matches/shared-user-profile-job-multiple-matches.component.css
@@ -49,8 +49,11 @@
 }
 .pj-titles{
     padding: 5px 0;
-    border-bottom: 1px solid #ffc0d8;
+    /* border-bottom: 1px solid #ffc0d8; */
 }
 .pj-titles  h6{
 	display: -webkit-inline-box !important;
+}
+p{
+	margin-bottom:0px !important;
 }
