--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -202,7 +202,7 @@
 												</button>
 											</div>
 										</div>
-										<app-shared-user-profile-matches  [isShownRequiements]="true" [postedJobsDetails]="postedJobsDetails"  [isMultipleMatches]="isMultipleMatches" 
+										<app-shared-user-profile-matches  [isShownRequiements]="true" [postedJobsDetails]="postedJobsDetails"  [isMultipleMatches]="isMultipleMatches" [application]="matchingUsers?.application" 
 										[matchedElement]="matchedElement" [missingElement]="missingElement"
 										[moreElement]="moreElement" [matchingUsers]="matchingUsers" [matchingUsersNew]="matchingUsersNew">
 										</app-shared-user-profile-matches>
@@ -261,7 +261,7 @@
 											</div>
 										</div>
 										<app-shared-user-profile-matches  [isShownRequiements]="true" [postedJobsDetails]="postedJobsDetails"  [isMultipleMatches]="isMultipleMatches" 
-										[matchedElement]="matchedElement" [missingElement]="missingElement"
+										[matchedElement]="matchedElement" [missingElement]="missingElement"  [application]="matchingUsersNew?.application" 
 										[moreElement]="moreElement" [matchingUsers]="matchingUsersNew" [matchingUsersNew]="matchingUsersNew">
 										</app-shared-user-profile-matches>
 										<div class="col-lg-12 info" style="text-align:end;">
