--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -261,7 +261,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='0'">
+			<!-- <div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='0'">
 				<ul class="list-group">
 					<li class="list-group-item" >
                         <span *ngIf="matchedElement && (jobInfo.facing_role == userInfo?.facing_role)">
@@ -309,7 +309,7 @@
                         </span>
                       </li>
 				</ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation=='0'">
 				<ul class="list-group">
 					<li class="list-group-item">
@@ -410,7 +410,7 @@
 					{{"dashboard.desiredSkills" | translate }}
 				 </h6>
 			</div>
-			<div class="pj-title mt-3" *ngIf="isMultipleMatches" >
+			<div class="pj-title" *ngIf="isMultipleMatches" >
 				
 			</div>
 			<div class="  mt-3  info-box" *ngIf="jobInfo.match_select?.experience=='1'">
@@ -661,7 +661,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='1'">
+			<!-- <div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='1'">
 				<ul class="list-group">
 					<li class="list-group-item" >
                         <span *ngIf="matchedElement && (jobInfo.facing_role == userInfo?.facing_role)">
@@ -709,7 +709,7 @@
                         </span>
                       </li>
 				</ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation=='1'">
 				<ul class="list-group">
 					<li class="list-group-item">
@@ -1063,7 +1063,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='2'">
+			<!-- <div class="  info-box" *ngIf="jobInfo.match_select?.facing_role=='2'">
 				<ul class="list-group">
 					<li class="list-group-item" >
                         <span *ngIf="matchedElement && (jobInfo.facing_role == userInfo?.facing_role)">
@@ -1111,7 +1111,7 @@
                         </span>
                       </li>
 				</ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation=='2'">
 				<ul class="list-group">
 					<li class="list-group-item">
@@ -1465,7 +1465,7 @@
                       </li>
 				</ul>
 			</div>
-			<div class="  info-box" *ngIf="jobInfo.facing_role && jobInfo.match_select?.facing_role==''">
+			<!-- <div class="  info-box" *ngIf="jobInfo.facing_role && jobInfo.match_select?.facing_role==''">
 				<ul class="list-group">
 					<li class="list-group-item" >
                         <span *ngIf="matchedElement && (jobInfo.facing_role == userInfo?.facing_role)">
@@ -1513,7 +1513,7 @@
                         </span>
                       </li>
 				</ul>
-			</div>
+			</div> -->
 			<div class=" info-box" *ngIf="jobInfo.match_select?.end_to_end_implementation=='' && jobInfo?.end_to_end_implementation  ">
 				<ul class="list-group">
 					<li class="list-group-item">
