--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.css
@@ -49,7 +49,11 @@
 }
 .pj-titles{
     padding: 5px 0;
-    border-bottom: 1px solid #ffc0d8;
+    /* border-bottom: 1px solid #ffc0d8; */
+}
+.pj-titles-0{
+    padding: 5px 0 !important;
+    /* border-bottom: 1px solid #ffc0d8; */
 }
 .pj-titles  h6{
 	display: -webkit-inline-box !important;
@@ -60,4 +64,7 @@
 }
 .mtop-4{
 	margin-top: 4rem!important;
+}
+p{
+	margin-bottom:0px !important;
 }
