--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -73,7 +73,7 @@
 				</div>
 				<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='0'">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase d-flex handsExps">
+						<li class="list-group-item text-uppercase d-flex handsExps" style="min-height: 55px;">
 							<ng-container *ngIf="matchingUsers?.profile?.hands_on_experience?.length; else elseHandsTemplate">
 								<ng-container *ngFor="let item of matchingUsers?.profile?.hands_on_experience; let i = index; let first = first;">
 								  <div class="text-center border-right pr-3"
@@ -295,7 +295,7 @@
 						</span>
 					</li>
 				</div>
-				<div *ngIf="postedJobsDetails?.match_select?.facing_role=='0'">
+				<!-- <div *ngIf="postedJobsDetails?.match_select?.facing_role=='0'">
 					<ul class="list-group">
 						<li class="list-group-item">
 							<span class="matchTxt">
@@ -350,7 +350,7 @@
 							</span>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 				<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='0'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -476,6 +476,28 @@
 						</div>
 					</div>
 				</div>
+				<div *ngIf="isOtherRequired && !applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
+				<div *ngIf="isOtherRequired && applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
+								  <span *ngIf="matchedElement" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="accordion mt-3 " *ngIf="desired">
 			<div class="pj-titles"  [ngClass]="(isMultipleMatches === true)?'padd-10':'padd-5'" ><h6 type="button" class="mb-0"></h6></div>
@@ -536,7 +558,7 @@
 				</div>
 				<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='1'">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase d-flex handsExps">
+						<li class="list-group-item text-uppercase d-flex handsExps"  style="min-height: 55px;">
 							<ng-container *ngIf="matchingUsers?.profile?.hands_on_experience?.length; else elseHandsTemplate">
 								<ng-container *ngFor="let item of matchingUsers?.profile?.hands_on_experience; let i = index; let first = first;">
 								  <div class="text-center border-right pr-3"
@@ -758,7 +780,7 @@
 						</span>
 					</li>
 				</div>
-				<div *ngIf="postedJobsDetails?.match_select?.facing_role=='1'">
+				<!-- <div *ngIf="postedJobsDetails?.match_select?.facing_role=='1'">
 					<ul class="list-group">
 						<li class="list-group-item">
 							<span class="matchTxt">
@@ -813,7 +835,7 @@
 							</span>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 				<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='1'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -939,6 +961,28 @@
 						</div>
 					</div>
 				</div>
+				<div *ngIf="isOtherDesired && !applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
+				<div *ngIf="isOtherDesired && applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
+								  <span *ngIf="matchedElement" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
 			</div><div class="accordion mt-0 " *ngIf="nice">
 				<div class="pj-titles"  style="padding: 10px 0px;"><h6 type="button" class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='2'">
@@ -998,7 +1042,7 @@
 				</div>
 				<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='2'">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase d-flex handsExps">
+						<li class="list-group-item text-uppercase d-flex handsExps"  style="min-height: 55px;">
 							<ng-container *ngIf="matchingUsers?.profile?.hands_on_experience?.length; else elseHandsTemplate">
 								<ng-container *ngFor="let item of matchingUsers?.profile?.hands_on_experience; let i = index; let first = first;">
 								  <div class="text-center border-right pr-3"
@@ -1220,7 +1264,7 @@
 						</span>
 					</li>
 				</div>
-				<div *ngIf="postedJobsDetails?.match_select?.facing_role=='2'">
+				<!-- <div *ngIf="postedJobsDetails?.match_select?.facing_role=='2'">
 					<ul class="list-group">
 						<li class="list-group-item">
 							<span class="matchTxt">
@@ -1275,7 +1319,7 @@
 							</span>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 				<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='2'">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -1401,6 +1445,28 @@
 						</div>
 					</div>
 				</div>
+				<div *ngIf="isOtherNice && !applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
+				<div *ngIf="isOtherNice && applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
+								  <span *ngIf="matchedElement" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="accordion mt-2" *ngIf="optional">
 				<div class="pj-titles"  style="padding: 5px 0px;" ><h6 type="button" class="mb-0"></h6></div>
@@ -1461,7 +1527,7 @@
 				</div>
 				<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience==''">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase d-flex handsExps">
+						<li class="list-group-item text-uppercase d-flex handsExps"  style="min-height: 55px;">
 							<ng-container *ngIf="matchingUsers?.profile?.hands_on_experience?.length; else elseHandsTemplate">
 								<ng-container *ngFor="let item of matchingUsers?.profile?.hands_on_experience; let i = index; let first = first;">
 								  <div class="text-center border-right pr-3"
@@ -1683,7 +1749,7 @@
 						</span>
 					</li>
 				</div>
-				<div *ngIf="postedJobsDetails?.match_select?.facing_role=='' && postedJobsDetails?.facing_role">
+				<!-- <div *ngIf="postedJobsDetails?.match_select?.facing_role=='' && postedJobsDetails?.facing_role">
 					<ul class="list-group">
 						<li class="list-group-item">
 							<span class="matchTxt">
@@ -1738,7 +1804,7 @@
 							</span>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 				<div *ngIf="postedJobsDetails?.match_select?.end_to_end_implementation=='' && postedJobsDetails?.end_to_end_implementation">
 					<ul class="list-group">
 						<li class="list-group-item">
@@ -1859,6 +1925,28 @@
 									<i class="fa fa-times text-danger "></i>
 								  {{item?.value ? item?.value : '--'}}
 								</span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
+				<div *ngIf="isOtherOptional && !applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
+								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- </span>
+								</li>
+							 </ul>
+						</div>
+					</div>
+				</div>
+				<div *ngIf="isOtherOptional && applicationShow">
+					<div class="row info-box"  >
+						<div class="col-lg-7 info" >
+							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
+								  <span *ngIf="matchedElement" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} </span>
 								</li>
 							 </ul>
 						</div>
