--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.css
@@ -45,7 +45,7 @@
 }
 .pj-titles{
     padding: 10px 0;
-    border-bottom: 1px solid #ffc0d8;
+    /* border-bottom: 1px solid #ffc0d8; */
 }
 .pj-titles  h6{
 	display: -webkit-inline-box !important;
