--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -53,7 +53,7 @@
 		<div formGroupName="match_select" >
 		<div class="row mt-3 info-box">
 			<div class="offset-lg-8 col-lg-4 text-center">
-					<div class="d-flex">
+					<div class="d-flex" >
 					<div class="rdn-radio">Required</div>
 					<div class="rdn-radio">Desired</div>
 					<div class="rdn-radio">Nice to have</div>
@@ -683,142 +683,6 @@
 					</li>
 				</ul>
 			</div>
-		</div>				
-		<div class="row info-box">
-			<div class="col-lg-3 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{"postJob.clientFacing" | translate}}</li>
-				</ul>
-			</div>
-			<div class="col-lg-5 info">
-				<ul class="list-group">
-					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.facing_role == '0'">{{"postJob.required" | translate}}</li>
-					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.facing_role == '1'">{{"postJob.notRequired" | translate}}</li>
-					<li class="list-group-item" *ngIf="!postJobForm?.value?.otherPref?.facing_role || postJobForm?.value?.otherPref?.facing_role=='' ">
-					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('clientfacing')" type="button" class="btn btn-theme-green" data-toggle="modal"
-			data-target="#addCriteria">Add </button></li>
-				</ul>
-			</div>
-			<div class="col-lg-4" *ngIf="!postJobForm?.value?.otherPref?.facing_role || postJobForm?.value?.otherPref?.facing_role=='' ">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled (click)="handleChange($event)"    value="0"  id="customRadio17A" name="facing_role" formControlName="facing_role"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio17A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled (click)="handleChange($event)"    value="1"  id="customRadio17B" name="facing_role" formControlName="facing_role"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio17B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" disabled (click)="handleChange($event)"    value="2"  id="customRadio17C" name="facing_role" formControlName="facing_role"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio17C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="col-lg-4" *ngIf="postJobForm?.value?.otherPref?.facing_role && postJobForm?.value?.otherPref?.facing_role !='' ">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio"  (click)="handleChange($event)"    value="0"  id="customRadio17A" name="facing_role" formControlName="facing_role"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio17A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio"  (click)="handleChange($event)"    value="1"  id="customRadio17B" name="facing_role" formControlName="facing_role"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio17B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio"  (click)="handleChange($event)"    value="2"  id="customRadio17C" name="facing_role" formControlName="facing_role"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio17C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>		
-		<div class="row info-box">
-			<div class="col-lg-3 caption">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize m-0">{{"postJob.trainingExperience" | translate}} </li>
-				</ul>
-			</div>
-			<div class="col-lg-5 info">
-				<ul class="list-group">
-					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.training_experience == '0'">{{"postJob.required" | translate}}</li>
-					<li class="list-group-item" *ngIf="postJobForm?.value?.otherPref?.training_experience == '1'">{{"postJob.notRequired" | translate}}</li>
-					<li class="list-group-item" *ngIf="!postJobForm?.value?.otherPref?.training_experience || postJobForm?.value?.otherPref?.training_experience=='' ">
-					<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('training')" type="button" class="btn btn-theme-green" data-toggle="modal"
-			data-target="#addCriteria">Add </button></li>
-				</ul>
-			</div>
-			<div class="col-lg-4" *ngIf="!postJobForm?.value?.otherPref?.training_experience || postJobForm?.value?.otherPref?.training_experience==''">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled (click)="handleChange($event)"    value="0"  id="customRadio18A" name="training_experience" formControlName="training_experience"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio18A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" disabled  (click)="handleChange($event)"    value="1"  id="customRadio18B" name="training_experience" formControlName="training_experience"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio18B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio"  disabled (click)="handleChange($event)"    value="2"  id="customRadio18C" name="training_experience" formControlName="training_experience"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio18C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="col-lg-4" *ngIf="postJobForm?.value?.otherPref?.training_experience && postJobForm?.value?.otherPref?.training_experience!=''">
-				<ul class="list-group">
-					<li class="list-group-item border-0 p-0 m-0 ">							
-						<div class="d-flex">
-							<div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="0"  id="customRadio18A" name="training_experience" formControlName="training_experience"  class="custom-control-input" >
-									<label class="custom-control-label" for="customRadio18A">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-									<input type="radio" (click)="handleChange($event)"    value="1"  id="customRadio18B" name="training_experience" formControlName="training_experience"  class="custom-control-input">
-									<label class="custom-control-label" for="customRadio18B">&nbsp;</label>
-								</div>
-							 </div>
-							 <div class="rdn-radio">
-								<div class="custom-control custom-radio">
-								  <input type="radio" (click)="handleChange($event)"    value="2"  id="customRadio18C" name="training_experience" formControlName="training_experience"  class="custom-control-input">
-								  <label class="custom-control-label" for="customRadio18C">&nbsp;</label>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
 		</div>		
 		<div class="col-lg-12 border-top pt-3">	</div>		
 		<div class="row info-box">
@@ -1052,6 +916,47 @@
 				</ul>
 			</div>
 		</div>	
+		<div class="col-lg-12 border-top pt-3">	</div>
+		<ng-container *ngIf="childForm?.value?.otherPref?.others?.length > 0 && pageShow">
+			<div class="row info-box" *ngFor="let others of childForm?.value?.otherPref?.others; let i = index">
+				<div class="col-lg-3 caption" *ngIf="others?.value == true">
+					<ul class="list-group">
+						<li class="list-group-item text-capitalize" *ngIf="others?.id == isShowOthers">Others</li>
+					</ul>
+				</div>
+				<div class="col-lg-5 info" *ngIf="others?.value == true">
+					<ul class="list-group">
+						<li class="list-group-item text-capitalize">{{others?.title}}</li>
+					</ul>
+				</div>
+				<div class="col-lg-4"  *ngIf="others?.value == true">
+					<ul class="list-group">
+						<li class="list-group-item border-0 p-0 m-0 ">							
+							<div class="d-flex">
+								<div class="rdn-radio">
+									<div class="custom-control custom-radio">
+										<input type="radio" (click)="handleChange($event)"    value="0"  id="{{others?.id}}A" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input" >
+										<label class="custom-control-label" for="{{others?.id}}A">&nbsp;</label>
+									</div>
+								 </div>
+								 <div class="rdn-radio">
+									<div class="custom-control custom-radio">
+										<input type="radio"  (click)="handleChange($event)"    value="1"  id="{{others?.id}}B" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
+										<label class="custom-control-label" for="{{others?.id}}B">&nbsp;</label>
+									</div>
+								 </div>
+								 <div class="rdn-radio">
+									<div class="custom-control custom-radio">
+									  <input type="radio" (click)="handleChange($event)"    value="2"  id="{{others?.id}}C" name="{{others?.id}}" formControlName="{{others?.id}}"  class="custom-control-input">
+									  <label class="custom-control-label" for="{{others?.id}}C">&nbsp;</label>
+									</div>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</ng-container>	
 		<ng-container *ngIf="childForm?.value?.otherPref?.extra_criteria?.length > 0  && isShow">
 			<div class="row info-box" *ngFor="let extra_criteria of childForm?.value?.otherPref?.extra_criteria; let i = index">
 				<div class="col-lg-3 caption">
