--- a/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/other-preference/other-preference.component.html
@@ -1,5 +1,5 @@
 <div formGroupName="otherPref">
-	<div class="row mt-5">	
+	<!-- <div class="row mt-5">	
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label class="font-weight-bold" >Client Facing Role  </label>
@@ -32,11 +32,48 @@
 				</div>
 			</div>
 		</div>
-	</div>							
+	</div> -->
+	<div class="row mt-2">
+		<div class="col-lg-12 col-md-6">
+			<label class="font-weight-bold">Custom Requirements</label>
+			<div ></div>
+		</div>
+	</div>
+	<div class="row mt-2" *ngFor="let ticket of others.controls; let i = index; let last = last">
+		<ng-container [formGroup]="ticket">
+			<div class="col-lg-6 col-md-10">
+				<div class=" form-group">
+					<div class="custom-control custom-checkbox mb-2">
+						<input type="checkbox" class="custom-control-input" value="true" [checked]="ticket.value.value" (change)="changeStatus(ticket.value.id,$event)" [name]="ticket.value.id" [id]="ticket.value.id">
+						<label class="custom-control-label font-weight-bold text-dark" [for]="ticket.value.id"> {{ticket.value.title}}</label>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-2 col-md-2" *ngIf="!(ticket.value.id <=5)">
+				<button type="button" class="text-danger btn p-0 btn-small"
+					style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveOthers(i)"><i class="fas fa-times"></i></button>
+			</div>
+		</ng-container>
+	</div>
+	<div class="row mt-2">
+		<div class="col-lg-12 col-md-6">
+			<label class="font-weight-bold">Add Custom Requirements </label>
+			<div ></div>
+		</div>
+	</div>
+	<div class="row mt-2" >
+		<div class="col-lg-5 col-md-4">
+			<input formControlName="others_data" maxlength="100" class="form-control mt-4" type="text" placeholder="Ex. Should work in CET Zone">
+		</div>
+		<div class="col-lg-5 col-md-4" style="top: 25px;">
+			<button (click)="onDuplicateOthers()" type="button" class="btn btn-outline-green ml-2"
+				style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+		</div>
+	</div>
 	<div class="row mt-4">
 		<div class="col-lg-6 col-md-12" >	
 			<div class=" form-group">
-				<label >{{"postJob.certification" | translate }}</label>
+				<label class="font-weight-bold" >{{"postJob.certification" | translate }}</label>
 				<mat-form-field class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipLists aria-label="certification">
@@ -95,7 +132,7 @@
 	
 	<div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
-			<label>{{"postJob.extraCriteria" | translate }} </label>
+			<label class="font-weight-bold">{{"postJob.extraCriteria" | translate }} </label>
 			<div ></div>
 		</div>
 	</div>
